build(docker): add "nx reset" before build

--- a/packages/just/dns/Dockerfile
+++ b/packages/just/dns/Dockerfile
@@ -16,6 +16,7 @@ COPY eslint.config.js nx.json tsconfig.json ./
 COPY packages/nx-plugins ./packages/nx-plugins
 COPY packages/shared ./packages/shared
 COPY packages/just ./packages/just
+RUN nx reset
 RUN nx build $APP_NAME
 
 
