build(workspace): add gcompat for bun

--- a/packages/workspace/Dockerfile
+++ b/packages/workspace/Dockerfile
@@ -6,5 +6,5 @@ WORKDIR /workspace
 ENV PATH=/workspace/node_modules/.bin:$PATH
 
 RUN apk update
-RUN apk add --no-cache docker docker-cli-compose git openssh-client
+RUN apk add --no-cache docker docker-cli-compose git openssh-client gcompat
 RUN npm i -g @antfu/ni@23.3.1 bun@1.2.2
