fix(nx-plugins-secrets-manager): not detectable by nx due to package name

--- a/packages/nx-plugins/secrets-manager/package.json
+++ b/packages/nx-plugins/secrets-manager/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nx-plugins-secrets-manager",
+    "name": "@cdw/monorepo/nx-plugins-secrets-manager",
     "description": ".env variables manager for secrets in NX monorepos",
     "author": {
         "name": "Justin Konratt",
