--- a/package.json
+++ b/package.json
@@ -33,15 +33,11 @@
     "dependencies": {
         "@directus/sdk": "^17.0.1",
         "@mermaid-js/mermaid-mindmap": "^9.3.0",
-        "@notionhq/client": "^2.2.15",
         "@nx/devkit": "20.4.6",
         "@parcel/watcher": "^2.5.0",
         "@swc/helpers": "0.5.12",
         "@t3-oss/env-core": "^0.11.0",
         "@tailwindcss/forms": "^0.5.7",
-        "@trpc/client": "^10.45.2",
-        "@trpc/next": "^10.45.2",
-        "@trpc/server": "^10.45.2",
         "axios": "^1.7.4",
         "classnames": "^2.5.1",
         "clsx": "^2.1.1",
@@ -50,12 +46,7 @@
         "encoding": "^0.1.13",
         "mermaid": "~9.1.7",
         "moment": "^2.30.1",
-        "next": "15.0.1",
         "pino": "^9.4.0",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "react-icons": "^5.3.0",
-        "trpc-openapi": "^1.2.0",
         "tslib": "^2.6.3",
         "vitepress-plugin-auto-sidebar": "^1.2.0",
         "vitepress-plugin-mermaid": "2.0.10",
@@ -81,14 +72,13 @@
         "@nx/eslint": "20.4.6",
         "@nx/eslint-plugin": "20.4.6",
         "@nx/js": "20.4.6",
-        "@nx/next": "20.4.6",
         "@nx/node": "20.4.6",
         "@nx/plugin": "20.4.6",
-        "@nx/react": "20.4.6",
         "@nx/vite": "20.4.6",
         "@nx/web": "20.4.6",
         "@nx/workspace": "20.4.6",
         "@octokit/types": "^13.5.0",
+        "@prettier/plugin-xml": "^3.4.1",
         "@secretlint/secretlint-rule-preset-recommend": "^8.2.4",
         "@sveltejs/adapter-node": "^5.2.12",
         "@sveltejs/kit": "^2.8.1",
@@ -98,32 +88,31 @@
         "@swc/core": "1.7.11",
         "@testing-library/react": "16.1.0",
         "@types/color": "^4.2.0",
-        "@types/d3": "^7.4.3",
+        "@types/eslint-plugin-tailwindcss": "^3.17.0",
         "@types/graphql": "^14.5.0",
         "@types/node": "20.17.19",
         "@types/node-cron": "^3.0.11",
         "@types/pg": "^8.11.11",
-        "@types/react": "18.3.3",
-        "@types/react-dom": "18.3.0",
         "@vitest/coverage-v8": "^2.1.4",
         "@vitest/ui": "^2.0.5",
         "astro": "^4.16.18",
         "autoprefixer": "^10.4.20",
         "chalk": "4.1.2",
-        "copy-file": "^11.0.0",
         "copyfiles": "^2.4.1",
-        "cross-env": "^7.0.3",
         "date-fns": "^4.1.0",
+        "depcheck": "^1.4.7",
         "dotenv-cli": "^7.4.4",
         "emailjs": "^4.0.3",
         "envsub": "^4.1.0",
         "esbuild": "^0.23.1",
         "eslint": "^9.21.0",
         "eslint-plugin-astro": "^1.3.1",
+        "eslint-plugin-format": "^1.0.1",
         "eslint-plugin-react": "7.35.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "eslint-plugin-svelte": "^2.43.0",
+        "eslint-plugin-tailwindcss": "^3.18.0",
         "flowbite-svelte": "^0.46.15",
         "glob": "^11.0.1",
         "globals": "^16.0.0",
@@ -136,6 +125,10 @@
         "nx": "20.4.6",
         "pino-pretty": "^11.2.2",
         "postcss": "8.4.49",
+        "prettier": "^3.5.2",
+        "prettier-plugin-astro": "^0.14.1",
+        "prettier-plugin-svelte": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "replace-in-files-cli": "^3.0.0",
         "rimraf": "^6.0.1",
         "secretlint": "^8.2.4",
