--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -97,12 +97,10 @@ services:
           "${STACK_NAME}_navidrome-data:/data/services/navidrome/data:ro",
           "${STACK_NAME}_netdata-config:/data/services/netdata/config:ro",
           "${STACK_NAME}_netdata-lib:/data/services/netdata/lib:ro",
-          "${STACK_NAME}_netdata-cache:/data/services/netdata/cache:ro",
           "${STACK_NAME}_pihole-etc:/data/services/pihole/etc:ro",
           "${STACK_NAME}_pihole-dnsmasq:/data/services/pihole/dnsmasq:ro",
           "${STACK_NAME}_portainer-data:/data/services/portainer/data:ro",
           "${STACK_NAME}_postgres-data:/data/services/postgres/data:ro",
-          "${STACK_NAME}_prometheus-data:/data/services/prometheus/data:ro",
           "${STACK_NAME}_sonarqube-config:/data/services/sonarqube/config:ro",
           "${STACK_NAME}_sonarqube-data:/data/services/sonarqube/data:ro",
           "${STACK_NAME}_sonarqube-extensions:/data/services/sonarqube/extensions:ro",
@@ -261,6 +259,7 @@ services:
     volumes:
       - gitlab-config:/etc/gitlab
       - gitlab-data:/var/opt/gitlab
+      - gitlab-shared:/var/opt/gitlab/gitlab-rails/shared
 
   gitlab-runner:
     <<: *common
@@ -345,6 +344,7 @@ services:
     image: ${IMAGE_BASE}/just-music-platform:${PROJECT_VERSION:-latest}
     volumes:
       - navidrome-data:/data
+      - navidrome-cache:/data/cache
       - ${MUSIC_VOLUME}:/music:ro
 
   netdata:
@@ -499,16 +499,21 @@ volumes:
 
   gitlab-config:
   gitlab-data:
+  # don't backup
+  gitlab-shared:
 
   grafana-storage:
   grafana-config:
 
   letsencrypt:
 
+  # don't backup
+  navidrome-cache:
   navidrome-data:
 
   netdata-config:
   netdata-lib:
+  # don't backup
   netdata-cache:
 
   pihole-etc:
@@ -518,6 +523,7 @@ volumes:
 
   postgres-data:
 
+  # don't backup
   prometheus-data:
 
   sonarqube-config:
@@ -525,8 +531,6 @@ volumes:
   sonarqube-extensions:
 
   vpn-data:
-
-  wandb-data:
 
 networks:
   default:
