--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -104,8 +104,7 @@ services:
           "${STACK_NAME}_sonarqube-config:/data/services/sonarqube/config:ro",
           "${STACK_NAME}_sonarqube-data:/data/services/sonarqube/data:ro",
           "${STACK_NAME}_sonarqube-extensions:/data/services/sonarqube/extensions:ro",
-          "${STACK_NAME}_vpn-data:/data/services/vpn/data:ro",
-          "${STACK_NAME}_wandb-data:/data/services/wandb/data:ro"
+          "${STACK_NAME}_vpn-data:/data/services/vpn/data:ro"
         ]
 
       ofelia.job-run.forget-backup.command: --verbose forget --prune --keep-daily 7 --keep-weekly 4 --keep-monthly 3
@@ -311,7 +310,7 @@ services:
     environment:
       - KEYCLOAK_ADMIN=${KEYCLOAK_USERNAME}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_PASSWORD}
-    image: ${DOCKER_PROXY}/quay.io/keycloak/keycloak:25.0.2
+    image: ${DOCKER_PROXY}/keycloak/keycloak:25.0.2
 
   music-downloader:
     <<: *common
@@ -456,7 +455,7 @@ services:
       - PORT=${VPN_PORT}
       - PASSWORD_HASH=${VPN_PASSWORD_HASH}
       - UI_TRAFFIC_STATS=true
-    image: ${DOCKER_PROXY}/ghcr.io/wg-easy/wg-easy:14
+    image: ghcr.io/wg-easy/wg-easy:14
     ports:
       - 51820:51820/udp
     sysctls:
