chore: fix linting with prettier

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,6 +98,12 @@ codegen:
     - nx affected -t codegen
   resource_group: single
 
+check formatting:
+  stage: lint
+  script:
+    - nx format:check
+  resource_group: single
+
 eslint:
   stage: lint
   script:
