--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "@types/node": "20.17.19",
         "@types/node-cron": "^3.0.11",
         "@types/pg": "^8.11.11",
+        "@typescript-eslint/parser": "^8.26.0",
         "@vitest/coverage-v8": "^2.1.9",
         "@vitest/ui": "^2.1.9",
         "astro": "^4.16.18",
@@ -107,11 +108,13 @@
         "eslint": "^9.21.0",
         "eslint-plugin-astro": "^1.3.1",
         "eslint-plugin-format": "^1.0.1",
+        "eslint-plugin-html": "^8.1.2",
         "eslint-plugin-react": "7.35.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "eslint-plugin-svelte": "^2.43.0",
         "eslint-plugin-tailwindcss": "^3.18.0",
+        "eslint-plugin-toml": "^0.12.0",
         "flowbite-svelte": "^0.46.15",
         "glob": "^11.0.1",
         "globals": "^16.0.0",
