--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
         "@testing-library/react": "16.1.0",
         "@types/color": "^4.2.0",
         "@types/eslint-plugin-tailwindcss": "^3.17.0",
-        "@types/node": "20.17.19",
+        "@types/node": "^22.13.9",
         "@types/node-cron": "^3.0.11",
         "@types/pg": "^8.11.11",
         "@typescript-eslint/parser": "^8.26.0",
@@ -109,6 +109,7 @@
         "eslint-plugin-astro": "^1.3.1",
         "eslint-plugin-format": "^1.0.1",
         "eslint-plugin-html": "^8.1.2",
+        "eslint-plugin-prettier": "^5.2.3",
         "eslint-plugin-react": "7.35.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
