--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
         "envsub": "^4.1.0",
         "esbuild": "^0.23.1",
         "eslint": "^9.21.0",
+        "eslint-config-prettier": "^10.0.2",
         "eslint-plugin-astro": "^1.3.1",
         "eslint-plugin-format": "^1.0.1",
         "eslint-plugin-html": "^8.1.2",
