--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -107,7 +107,8 @@ services:
           "${STACK_NAME}_vpn-data:/data/services/vpn/data:ro"
         ]
 
-      ofelia.job-run.forget-backup.command: --verbose forget --prune --keep-daily 7 --keep-weekly 4 --keep-monthly 3
+      ofelia.job-run.forget-backup.command:
+        --verbose forget --prune --keep-daily 7 --keep-weekly 4 --keep-monthly 3
       ofelia.job-run.forget-backup.environment: |-
         [
           "AWS_ACCESS_KEY_ID=${BACKBLAZE_KEY_ID}",
@@ -319,8 +320,8 @@ services:
     environment:
       - DOWNLOAD_DIR=/music/downloads
       - PORT=${MUSIC_DOWNLOADER_PORT}
-    healthcheck:
-      test: wget -qO- http://$(hostname):${MUSIC_DOWNLOADER_PORT}/api/trpc/health?input={} || exit 1
+    # healthcheck:
+    #   test: wget -qO- http://$(hostname):${MUSIC_DOWNLOADER_PORT}/api/trpc/health?input={} || exit 1
     image: ${IMAGE_BASE}/just-music-downloader:${PROJECT_VERSION:-latest}
     volumes:
       - ${MUSIC_VOLUME}/downloads:/music/downloads
@@ -423,7 +424,9 @@ services:
       - SONAR_JDBC_PASSWORD=${POSTGRES_PASSWORD}
       - SONAR_JDBC_URL=jdbc:postgresql://${DB_NAME}:${DB_PORT}/sonarqube
     healthcheck:
-      test: wget -qO- http://localhost:9000/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"' || exit 1
+      test:
+        wget -qO- http://localhost:9000/api/system/status | grep -q -e '"status":"UP"' -e
+        '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"' || exit 1
     image: ${DOCKER_PROXY}/sonarqube:10-community
     volumes:
       - sonarqube-config:/opt/sonarqube/conf
