feat(zinzow-website): add leaflet

--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
         "color": "^4.2.3",
         "dotenv": "^16.4.7",
         "encoding": "^0.1.13",
+        "leaflet": "^1.9.4",
         "mermaid": "~9.1.7",
         "moment": "^2.30.1",
         "pino": "^9.4.0",
+        "svelte-leafletjs": "^2.0.0",
         "tslib": "^2.6.3",
         "vitepress-plugin-auto-sidebar": "^1.2.0",
         "vitepress-plugin-mermaid": "2.0.10",
@@ -89,6 +91,7 @@
         "@testing-library/react": "16.1.0",
         "@types/color": "^4.2.0",
         "@types/eslint-plugin-tailwindcss": "^3.17.0",
+        "@types/leaflet": "^1.9.16",
         "@types/node": "^22.13.9",
         "@types/node-cron": "^3.0.11",
         "@types/pg": "^8.11.11",
