chore: fix linting

--- a/.prettierrc
+++ b/.prettierrc
@@ -30,5 +30,5 @@
             }
         }
     ],
-    "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss", "prettier-plugin-astro"]
+    "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-astro"]
 }
