--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "color": "^4.2.3",
         "dotenv": "^16.4.7",
         "encoding": "^0.1.13",
+        "iconify-icon": "^2.3.0",
         "mermaid": "~9.1.7",
         "moment": "^2.30.1",
         "pino": "^9.4.0",
@@ -55,7 +56,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
-        "@antfu/eslint-config": "^4.3.0",
+        "@antfu/eslint-config": "^4.10.1",
         "@apollo/client": "^3.11.10",
         "@astrojs/tailwind": "^5.1.5",
         "@cloudflare/kv-asset-handler": "^0.3.4",
@@ -67,7 +68,7 @@
         "@graphql-codegen/plugin-helpers": "^5.1.0",
         "@graphql-codegen/typescript": "^4.1.5",
         "@graphql-codegen/typescript-operations": "^4.5.1",
-        "@iconify/svelte": "^4.0.2",
+        "@iconify/svelte": "^4.2.0",
         "@nx/esbuild": "20.4.6",
         "@nx/eslint": "20.4.6",
         "@nx/eslint-plugin": "20.4.6",
@@ -81,8 +82,8 @@
         "@prettier/plugin-xml": "^3.4.1",
         "@secretlint/secretlint-rule-preset-recommend": "^8.2.4",
         "@sveltejs/adapter-node": "^5.2.12",
-        "@sveltejs/kit": "^2.8.1",
-        "@sveltejs/vite-plugin-svelte": "^4.0.0",
+        "@sveltejs/kit": "^2.19.2",
+        "@sveltejs/vite-plugin-svelte": "^5.0.3",
         "@swc-node/register": "1.10.9",
         "@swc/cli": "0.4.0",
         "@swc/core": "1.7.11",
@@ -114,10 +115,10 @@
         "eslint-plugin-react": "7.35.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
-        "eslint-plugin-svelte": "^2.45.1",
+        "eslint-plugin-svelte": "^3.1.0",
         "eslint-plugin-tailwindcss": "^3.18.0",
         "eslint-plugin-toml": "^0.12.0",
-        "flowbite-svelte": "^0.46.15",
+        "flowbite-svelte": "^0.48.4",
         "glob": "^11.0.1",
         "globals": "^16.0.0",
         "graphql": "^16.9.0",
@@ -131,16 +132,15 @@
         "postcss": "8.4.49",
         "prettier": "^3.5.2",
         "prettier-plugin-astro": "^0.14.1",
-        "prettier-plugin-svelte": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "replace-in-files-cli": "^3.0.0",
         "rimraf": "^6.0.1",
         "secretlint": "^8.2.4",
         "simple-git": "^3.27.0",
         "stream-browserify": "^3.0.0",
-        "svelte": "^5.0.0",
+        "svelte": "^5.23.0",
         "svelte-apollo": "^0.5.0",
-        "svelte-check": "^4.0.0",
+        "svelte-check": "^4.1.5",
         "svelte-infinite-scroll": "^2.0.1",
         "tailwindcss": "3.4.17",
         "tsconfig-paths": "^4.2.0",
@@ -148,7 +148,7 @@
         "typedoc": "0.27.9",
         "typedoc-plugin-markdown": "^4.4.2",
         "typescript": "5.7.3",
-        "vite": "^5.4.14",
+        "vite": "^6.2.2",
         "vitepress": "1.3.2",
         "vitest": "^2.1.9",
         "wrangler": "^3.76.0",
