--- a/packages/just/website/.env.secure.yaml
+++ b/packages/just/website/.env.secure.yaml
@@ -11,10 +11,8 @@ secrets:
 
   index:
     vars:
-      - GITHUB_TOKEN
       - GRAVATAR_EMAIL
-      - CMS_USER
-      - CMS_PASSWORD
+      - CMS_TOKEN
       - PORT
 
   ../smtp:
