feat(just-website): fully translated website

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,10 @@
             "@cdw/monorepo/shared-logging": ["packages/shared/logging/src/index.ts"],
             "@cdw/monorepo/shared-trivy": ["packages/shared/trivy/src/index.ts"],
             "@cdw/monorepo/shared-utils": ["packages/shared/utils/src/index.ts"],
-            "@cdw/monorepo/shared-utils/*": ["packages/shared/utils/src/*.ts"]
+            "@cdw/monorepo/shared-utils/*": [
+                "packages/shared/utils/src/*.ts",
+                "packages/shared/utils/src/*/index.ts"
+            ]
         },
         "resolveJsonModule": true,
         "allowJs": true,
