feat(just-website): added events page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,7 @@
             ]
         },
         "resolveJsonModule": true,
+        "allowArbitraryExtensions": true,
         "allowJs": true,
         "strict": true,
         "strictBindCallApply": true,
