feat(just-website):  add SEO optimization

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -196,11 +196,13 @@ server {
     }
 
     location /rest {
+        gzip off;
         set $upstream music-platform:$music_platform_port;
         proxy_pass http://$upstream;
     }
 
     location / {
+        gzip off;
         access_by_lua_file /etc/nginx/lua/access.lua;
     	set $upstream music-platform:$music_platform_port;
         proxy_pass http://$upstream;
@@ -241,6 +243,7 @@ server {
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
+        gzip off;
         set $upstream 172.17.0.1:$netdata_port;
         proxy_pass http://$upstream;
     }
@@ -258,6 +261,7 @@ server {
     }
 
     location / {
+        gzip off;
         set $upstream portainer:$portainer_port;
         proxy_pass http://$upstream;
     }
@@ -290,6 +294,7 @@ server {
     server_name sonar.justinkonratt.com;
 
     location / {
+        gzip off;
         set $upstream sonarqube:$sonarqube_port;
         proxy_pass http://$upstream;
     }
@@ -308,19 +313,6 @@ server {
 
     location / {
         set $upstream vpn:$vpn_port;
-        proxy_pass http://$upstream;
-    }
-}
-
-server {
-    set_by_lua_block $wandb_port { return os.getenv("WANDB_PORT"); }
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name wandb.justinkonratt.com;
-
-    location / {
-        set $upstream wandb:$wandb_port;
         proxy_pass http://$upstream;
     }
 }
