--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
         "prettier-plugin-tailwindcss": "^0.6.11",
         "replace-in-files-cli": "^3.0.0",
         "rimraf": "^6.0.1",
+        "schema-dts": "^1.1.5",
         "secretlint": "^8.2.4",
         "simple-git": "^3.27.0",
         "stream-browserify": "^3.0.0",
