style(just-website): fix linting

--- a/packages/just/website/tsconfig.json
+++ b/packages/just/website/tsconfig.json
@@ -15,5 +15,5 @@
         ".svelte-kit/non-ambient.d.ts",
         ".svelte-kit/types/**/$types.d.ts"
     ],
-    "exclude": []
+    "exclude": ["**/generated/*"]
 }
