build(just-website): update env variables config

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -16,7 +16,6 @@ env:
   PORTAINER_PORT: 9000
   PROMETHEUS_PORT: 9090
   SONARQUBE_PORT: 9000
-  WANDB_PORT: 8080
 
   MUSIC_VOLUME: /home/jkonratt/music
 
@@ -177,8 +176,5 @@ secrets:
   website:
     prefix: true
     vars:
-      - GITHUB_TOKEN
-      - GRAVATAR_EMAIL
       - PORT
-      - CMS_USER
-      - CMS_PASSWORD
+      - CMS_TOKEN
