feat(shared-mlflow): add mlflow

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -102,14 +102,10 @@ secrets:
       - REALM
       - PORT
 
-  linkwarden:
+  mlflow:
     prefix: true
     vars:
-      - DOMAIN
       - PORT
-      - SECRET
-      - AUTH_CLIENT_ID
-      - AUTH_CLIENT_SECRET
 
   music/platform:
     prefix: true
