--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -181,6 +181,21 @@ server {
 }
 
 server {
+    set_by_lua_block $mlflow_port { return os.getenv("MLFLOW_PORT"); }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name mlflow.justinkonratt.com;
+
+    access_by_lua_file /etc/nginx/lua/access.lua;
+
+    location / {
+        set $upstream mlflow:$mlflow_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $music_platform_port { return os.getenv("MUSIC_PLATFORM_PORT"); }
 
     listen 443 ssl http2;
