--- a/packages/just/nginx/envs.conf
+++ b/packages/just/nginx/envs.conf
@@ -20,13 +20,11 @@ env DOCKER_REGISTRY_PORT;
 
 env DOCUMENTATION_PORT;
 
-env DOKU_PORT;
-
-env GHOST_PORT;
-
 env GITLAB_PORT;
 
 env GRAFANA_PORT;
+
+env MLFLOW_PORT;
 
 env MUSIC_PLATFORM_PORT;
 
@@ -45,7 +43,5 @@ env PROMETHEUS_PORT;
 env SONARQUBE_PORT;
 
 env VPN_PORT;
-
-env WANDB_PORT;
 
 env WEBSITE_PORT;
