--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -94,6 +94,7 @@ services:
           "${STACK_NAME}_grafana-storage:/data/services/grafana/storage:ro",
           "${STACK_NAME}_grafana-config:/data/services/grafana/config:ro",
           "${STACK_NAME}_letsencrypt:/data/services/letsencrypt:ro",
+          "${STACK_NAME}_mlflow-artifacts:/data/services/mlflow/artifacts:ro",
           "${STACK_NAME}_navidrome-data:/data/services/navidrome/data:ro",
           "${STACK_NAME}_netdata-config:/data/services/netdata/config:ro",
           "${STACK_NAME}_netdata-lib:/data/services/netdata/lib:ro",
@@ -313,6 +314,19 @@ services:
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_PASSWORD}
     image: ${DOCKER_PROXY}/keycloak/keycloak:25.0.2
 
+  mlflow:
+    <<: *common
+    command: --app-name basic-auth
+    environment:
+      - MLFLOW_BACKEND_STORE_URI=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${DB_NAME}:${DB_PORT}/mlflow
+      - MLFLOW_DEFAULT_ARTIFACT_ROOT=/mlflow/artifacts
+      - MLFLOW_PORT=${MLFLOW_PORT}
+      - MLFLOW_HOST=0.0.0.0
+      - MLFLOW_EXPOSE_PROMETHEUS=/mlflow/prometheus
+    image: ${IMAGE_BASE}/shared-mlflow:${PROJECT_VERSION:-latest}
+    volumes:
+      - mlflow-artifacts:/mlflow/artifacts
+
   music-downloader:
     <<: *common
     cap_add:
@@ -467,13 +481,6 @@ services:
     volumes:
       - vpn-data:/etc/wireguard
 
-  # TODO: switch to MLFlow
-  # wandb:
-  #   <<: *common
-  #   image: ${DOCKER_PROXY}/wandb/local:0.59.2
-  #   volumes:
-  #     - wandb-data:/vol
-
   website:
     <<: *common
     environment:
@@ -509,6 +516,8 @@ volumes:
   # don't backup
   navidrome-cache:
   navidrome-data:
+
+  mlflow-artifacts:
 
   netdata-config:
   netdata-lib:
