--- a/packages/just/prometheus/prometheus.yaml
+++ b/packages/just/prometheus/prometheus.yaml
@@ -9,7 +9,7 @@ alerting:
   alertmanagers:
     - static_configs:
         - targets:
-          # - alertmanager:9093
+        # - alertmanager:9093
 
 # Load rules once and periodically evaluate them according to the global "evaluation_interval".
 rule_files:
@@ -28,10 +28,10 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
 
-  #################################################################################################
+  # ################################################################################################
 
   - job_name: netdata
-    metrics_path: "/api/v1/allmetrics"
+    metrics_path: /api/v1/allmetrics
     params:
       # format: prometheus | prometheus_all_hosts
       # You can use `prometheus_all_hosts` if you want Prometheus to set the `instance` to your hostname instead of IP
@@ -39,18 +39,18 @@ scrape_configs:
       #
       # source: as-collected | raw | average | sum | volume
       # default is: average
-      #source: [as-collected]
+      # source: [as-collected]
       #
       # server name for this prometheus - the default is the client IP
       # for Netdata to uniquely identify it
-      #server: ["prometheus1"]
+      # server: ["prometheus1"]
     honor_labels: true
     static_configs:
       - targets: ["host.docker.internal:19999"]
-  #################################################################################################
+  # ################################################################################################
 
   - job_name: gitlab
-    metrics_path: "/-/metrics"
+    metrics_path: /-/metrics
     params:
       # format: prometheus | prometheus_all_hosts
       # You can use `prometheus_all_hosts` if you want Prometheus to set the `instance` to your hostname instead of IP
@@ -58,12 +58,20 @@ scrape_configs:
       #
       # source: as-collected | raw | average | sum | volume
       # default is: average
-      #source: [as-collected]
+      # source: [as-collected]
       #
       # server name for this prometheus - the default is the client IP
       # for Netdata to uniquely identify it
-      #server: ["prometheus1"]
+      # server: ["prometheus1"]
     honor_labels: true
     static_configs:
-      - targets: ["gitlab"]
-#################################################################################################
+      - targets: [gitlab]
+
+  - job_name: mlflow
+    metrics_path: /metrics
+    params:
+      format: [prometheus]
+    honor_labels: true
+    static_configs:
+      - targets: [mlflow]
+# ################################################################################################
