feat(just-website): add cv template

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -339,6 +339,12 @@ server {
     listen [::]:443 ssl http2;
     server_name justinkonratt.com;
 
+    location /private/ {
+        if ($is_private_ip = false) {
+            return 403;
+        }
+    }
+
     location / {
         set $upstream website:$website_port;
         proxy_pass http://$upstream;
