fix(shared-mlflow): fix dockerfile cmd -> shell

--- a/packages/shared/mlflow/Dockerfile
+++ b/packages/shared/mlflow/Dockerfile
@@ -2,5 +2,5 @@ FROM python:3.10-slim
 
 RUN pip install mlflow==2.21.3 psycopg2-binary==2.9.10
 
-CMD ["bash"]
+SHELL ["bash"]
 ENTRYPOINT [ "mlflow", "server" ]
