chore: switch to de domain

--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -5,8 +5,8 @@ bitwardenInfos:
     value: PROJECT_NAME
 
 env:
-  DOCKER_REGISTRY: docker.justinkonratt.com
-  DOCKER_PROXY: gitlab.justinkonratt.com/cdw/dependency_proxy/containers
+  DOCKER_REGISTRY: docker.justinkonratt.de
+  DOCKER_PROXY: gitlab.justinkonratt.de/cdw/dependency_proxy/containers
   IMAGE_BASE: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
   BASE_STACK_NAME: ${ORGANIZATION}_${PROJECT}
   TZ: Europe/Berlin
