--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -18,7 +18,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name adminer.justinkonratt.com;
+    server_name adminer.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -35,12 +35,12 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name auth.justinkonratt.com;
+    server_name auth.justinkonratt.de;
 
     location / {
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-Protocol https;
-        proxy_set_header Host auth.justinkonratt.com;
+        proxy_set_header Host auth.justinkonratt.de;
         set $upstream keycloak:$keycloak_port;
         proxy_pass http://$upstream;
     }
@@ -51,7 +51,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name bitwarden.justinkonratt.com;
+    server_name bitwarden.justinkonratt.de;
 
     location / {
         set $upstream bitwarden:$bitwarden_port;
@@ -64,7 +64,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name cms.justinkonratt.com;
+    server_name cms.justinkonratt.de;
 
     location / {
         set $upstream cms:$cms_port;
@@ -77,7 +77,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name dashboard.justinkonratt.com;
+    server_name dashboard.justinkonratt.de;
 
     access_by_lua_file /etc/nginx/lua/access.lua;
 
@@ -92,7 +92,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name dns.justinkonratt.com;
+    server_name dns.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -109,7 +109,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name docker.justinkonratt.com;
+    server_name docker.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -130,7 +130,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name docs.justinkonratt.com;
+    server_name docs.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -147,7 +147,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name gitlab.justinkonratt.com;
+    server_name gitlab.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -168,7 +168,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name grafana.justinkonratt.com;
+    server_name grafana.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -185,7 +185,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name mlflow.justinkonratt.com;
+    server_name mlflow.justinkonratt.de;
 
     access_by_lua_file /etc/nginx/lua/access.lua;
 
@@ -200,7 +200,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name music.justinkonratt.com;
+    server_name music.justinkonratt.de;
 
     location /callback-auth {
         access_by_lua_file /etc/nginx/lua/access.lua;
@@ -229,7 +229,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name music-downloader.justinkonratt.com;
+    server_name music-downloader.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -249,7 +249,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name netdata.justinkonratt.com;
+    server_name netdata.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -269,7 +269,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name portainer.justinkonratt.com;
+    server_name portainer.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -287,7 +287,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name prometheus.justinkonratt.com;
+    server_name prometheus.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -306,7 +306,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name sonar.justinkonratt.com;
+    server_name sonar.justinkonratt.de;
 
     location / {
         gzip off;
@@ -320,7 +320,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name vpn.justinkonratt.com;
+    server_name vpn.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
@@ -337,7 +337,7 @@ server {
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name justinkonratt.com;
+    server_name justinkonratt.de;
 
     location /private/ {
         if ($is_private_ip = false) {
