--- a/packages/just/nginx/conf/ssl.conf
+++ b/packages/just/nginx/conf/ssl.conf
@@ -1,5 +1,5 @@
-ssl_certificate /etc/letsencrypt/live/justinkonratt.com/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/justinkonratt.com/privkey.pem;
+ssl_certificate /etc/letsencrypt/live/justinkonratt.de/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/justinkonratt.de/privkey.pem;
 
 ssl_protocols TLSv1.2 TLSv1.3;
 ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-CHACHA20-POLY1305;
