feat(just-nginx): add custom access files for services

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -187,7 +187,7 @@ server {
     listen [::]:443 ssl http2;
     server_name mlflow.justinkonratt.de;
 
-    access_by_lua_file /etc/nginx/lua/access.lua;
+    access_by_lua_file /etc/nginx/lua/mlflow-access.lua;
 
     location / {
         set $upstream mlflow:$mlflow_port;
@@ -203,11 +203,11 @@ server {
     server_name music.justinkonratt.de;
 
     location /callback-auth {
-        access_by_lua_file /etc/nginx/lua/access.lua;
+        access_by_lua_file /etc/nginx/lua/music-access.lua;
     }
 
     location /callback-logout {
-        access_by_lua_file /etc/nginx/lua/access.lua;
+        access_by_lua_file /etc/nginx/lua/music-access.lua;
     }
 
     location /rest {
@@ -218,7 +218,7 @@ server {
 
     location / {
         gzip off;
-        access_by_lua_file /etc/nginx/lua/access.lua;
+        access_by_lua_file /etc/nginx/lua/music-access.lua;
     	set $upstream music-platform:$music_platform_port;
         proxy_pass http://$upstream;
     }
