refactor(just-nginx): move env for music platform header

--- a/packages/just/nginx/envs.conf
+++ b/packages/just/nginx/envs.conf
@@ -25,14 +25,15 @@ env GITLAB_PORT;
 env GRAFANA_PORT;
 
 env MLFLOW_PORT;
+env MLFLOW_API_KEY;
 
 env MUSIC_PLATFORM_PORT;
+env MUSIC_PLATFORM_AUTH_USERNAME_HEADER;
 
 env MUSIC_DOWNLOADER_PORT;
 
 env NETDATA_PORT;
 
-env NGINX_AUTH_USERNAME_HEADER;
 env NGINX_AUTH_CLIENT_ID;
 env NGINX_AUTH_CLIENT_SECRET;
 
