feat(just-website): cv background and access

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -343,6 +343,11 @@ server {
         if ($is_private_ip = false) {
             return 403;
         }
+
+        access_by_lua_file /etc/nginx/lua/access.lua;
+
+        set $upstream website:$website_port;
+        proxy_pass http://$upstream;
     }
 
     location / {
