fix(just-nginx): create auth module for lua files

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -1,3 +1,5 @@
+lua_package_path "/etc/nginx/lua/?.lua;;";
+
 variables_hash_max_size 2024;
 variables_hash_bucket_size 128;
 
@@ -16,8 +18,9 @@ server {
 server {
     set_by_lua_block $adminer_port { return os.getenv("ADMINER_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name adminer.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -33,8 +36,9 @@ server {
 server {
     set_by_lua_block $keycloak_port { return os.getenv("KEYCLOAK_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name auth.justinkonratt.de;
 
     location / {
@@ -49,8 +53,9 @@ server {
 server {
     set_by_lua_block $bitwarden_port { return os.getenv("BITWARDEN_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name bitwarden.justinkonratt.de;
 
     location / {
@@ -62,8 +67,9 @@ server {
 server {
     set_by_lua_block $cms_port { return os.getenv("CMS_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name cms.justinkonratt.de;
 
     location / {
@@ -75,8 +81,9 @@ server {
 server {
     set_by_lua_block $dashboard_port { return os.getenv("DASHBOARD_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name dashboard.justinkonratt.de;
 
     access_by_lua_file /etc/nginx/lua/access.lua;
@@ -90,8 +97,9 @@ server {
 server {
     set_by_lua_block $dns_web_port { return os.getenv("DNS_WEB_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name dns.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -107,8 +115,9 @@ server {
 server {
     set_by_lua_block $docker_registry_port { return os.getenv("DOCKER_REGISTRY_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name docker.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -128,8 +137,9 @@ server {
 server {
     set_by_lua_block $documentation_port { return os.getenv("DOCUMENTATION_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name docs.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -145,8 +155,9 @@ server {
 server {
     set_by_lua_block $gitlab_port { return os.getenv("GITLAB_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name gitlab.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -166,8 +177,9 @@ server {
 server {
     set_by_lua_block $grafana_port { return os.getenv("GRAFANA_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name grafana.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -183,8 +195,9 @@ server {
 server {
     set_by_lua_block $mlflow_port { return os.getenv("MLFLOW_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name mlflow.justinkonratt.de;
 
     access_by_lua_file /etc/nginx/lua/mlflow-access.lua;
@@ -198,8 +211,9 @@ server {
 server {
     set_by_lua_block $music_platform_port { return os.getenv("MUSIC_PLATFORM_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name music.justinkonratt.de;
 
     location /callback-auth {
@@ -227,8 +241,9 @@ server {
 server {
     set_by_lua_block $music_downloader_port { return os.getenv("MUSIC_DOWNLOADER_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name music-downloader.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -247,8 +262,9 @@ server {
     set_by_lua_block $server_address { return os.getenv("SERVER_ADDRESS"); }
     set_by_lua_block $netdata_port { return os.getenv("NETDATA_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name netdata.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -267,8 +283,9 @@ server {
 server {
     set_by_lua_block $portainer_port { return os.getenv("PORTAINER_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name portainer.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -285,8 +302,9 @@ server {
 server {
     set_by_lua_block $prometheus_port { return os.getenv("PROMETHEUS_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name prometheus.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -304,8 +322,9 @@ server {
 server {
     set_by_lua_block $sonarqube_port { return os.getenv("SONARQUBE_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name sonar.justinkonratt.de;
 
     location / {
@@ -318,8 +337,9 @@ server {
 server {
     set_by_lua_block $vpn_port { return os.getenv("VPN_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name vpn.justinkonratt.de;
 
     if ($is_private_ip = false) {
@@ -335,8 +355,9 @@ server {
 server {
     set_by_lua_block $website_port { return os.getenv("WEBSITE_PORT"); }
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name justinkonratt.de;
 
     location /private/ {
