feat(just): add mail service

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -102,6 +102,12 @@ secrets:
       - REALM
       - PORT
 
+  mail:
+    prefix: true
+    vars:
+      - HOSTNAME
+      - PORT
+
   mlflow:
     prefix: true
     vars:
