--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -193,6 +193,24 @@ server {
 }
 
 server {
+    set_by_lua_block $mail_port { return os.getenv("MAIL_PORT"); }
+
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name mail.justinkonratt.de;
+
+    if ($is_private_ip = false) {
+        return 403;
+    }
+
+    location / {
+        set $upstream mail:$mail_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
     set_by_lua_block $mlflow_port { return os.getenv("MLFLOW_PORT"); }
 
     listen 443 ssl;
