feat(just-mail): no config needed anymore and use mounted letsencrypt

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -106,7 +106,54 @@ secrets:
     prefix: true
     vars:
       - HOSTNAME
-      - PORT
+      - PASS_SCHEME
+      - DBNAME
+      - DBUSER
+      - DBPASS
+      - DBROOT
+      - REDISPASS
+      - HTTP_PORT
+      - HTTPS_PORT
+      - HTTP_REDIRECT
+      - SMTP_PORT
+      - SMTPS_PORT
+      - SUBMISSION_PORT
+      - IMAP_PORT
+      - IMAPS_PORT
+      - POP_PORT
+      - POPS_PORT
+      - SIEVE_PORT
+      - DOVEADM_PORT
+      - SQL_PORT
+      - REDIS_PORT
+      - COMPOSE_PROJECT_NAME
+      - DOCKER_COMPOSE_VERSION
+      - ACL_ANYONE
+      - MAILDIR_GC_TIME
+      - AUTODISCOVER_SAN
+      - SKIP_LETS_ENCRYPT
+      - ENABLE_SSL_SNI
+      - SKIP_IP_CHECK
+      - SKIP_HTTP_VERIFICATION
+      - SKIP_UNBOUND_HEALTHCHECK
+      - SKIP_CLAMD
+      - SKIP_SOGO
+      - SKIP_FTS
+      - FTS_HEAP
+      - FTS_PROCS
+      - ALLOW_ADMIN_EMAIL_LOGIN
+      - USE_WATCHDOG
+      - WATCHDOG_NOTIFY_BAN
+      - WATCHDOG_NOTIFY_START
+      - WATCHDOG_EXTERNAL_CHECKS
+      - WATCHDOG_VERBOSE
+      - LOG_LINES
+      - IPV4_NETWORK
+      - IPV6_NETWORK
+      - MAILDIR_SUB
+      - SOGO_EXPIRE_SESSION
+      - WEBAUTHN_ONLY_TRUSTED_VENDORS
+      - DISABLE_NETFILTER_ISOLATION_RULE
 
   mlflow:
     prefix: true
