--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -389,6 +389,10 @@ server {
         proxy_pass http://$upstream;
     }
 
+    location /callback-auth {
+        access_by_lua_file /etc/nginx/lua/access.lua;
+    }
+
     location / {
         set $upstream website:$website_port;
         proxy_pass http://$upstream;
