--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -40,6 +40,7 @@
         "astro-build.astro-vscode",
         "dotjoshjohnson.xml",
         "esbenp.prettier-vscode",
-        "dnut.rewrap-revived"
+        "dnut.rewrap-revived",
+        "github.copilot"
     ]
 }
