fix(just-nginx): fix mail port

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -193,7 +193,7 @@ server {
 }
 
 server {
-    set_by_lua_block $mail_port { return os.getenv("MAIL_PORT"); }
+    set_by_lua_block $mail_port { return os.getenv("MAIL_HTTP_PORT"); }
 
     listen 443 ssl;
     listen [::]:443 ssl;
